<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/_777"
        android:textSize="80sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:gravity="center"
        android:text="@string/app_subtitle"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <Spinner
        android:id="@+id/dropdown_rows"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/rows"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_subtitle" />

    <Spinner
        android:id="@+id/dropdown_columns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:drawSelectorOnTop="true"
        android:entries="@array/columns"
        app:layout_constraintLeft_toLeftOf="@id/dropdown_rows"
        app:layout_constraintRight_toRightOf="@id/dropdown_rows"
        app:layout_constraintTop_toBottomOf="@id/dropdown_rows" />

    <EditText
        android:id="@+id/field_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/search"
        app:layout_constraintLeft_toLeftOf="@id/dropdown_columns"
        app:layout_constraintRight_toRightOf="@id/dropdown_columns"
        app:layout_constraintTop_toBottomOf="@id/dropdown_columns" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/search"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_search" />

</androidx.constraintlayout.widget.ConstraintLayout>