<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_key"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/label_key"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="@id/row_1_guideline"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_key"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_key"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/row_1_guideline"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintLeft_toRightOf="@id/label_key"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/row_1_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="100dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A5A0A0"
            app:layout_constraintBottom_toBottomOf="@id/row_1_guideline"
            app:layout_constraintLeft_toLeftOf="@id/row_1_guideline"
            app:layout_constraintRight_toRightOf="@id/row_1_guideline"
            app:layout_constraintTop_toTopOf="@id/row_1_guideline" />

        <TextView
            android:id="@+id/label_hebrew_names"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/label_hebrew_names"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/row_2_guideline"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_hebrew_names"
            app:layout_constraintTop_toTopOf="@id/row_1_guideline" />

        <TextView
            android:id="@+id/text_hebrew_names"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/row_2_guideline"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintLeft_toRightOf="@id/label_hebrew_names"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/row_1_guideline"
            tools:text="Kether" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/row_2_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="200dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A5A0A0"
            app:layout_constraintBottom_toBottomOf="@id/row_2_guideline"
            app:layout_constraintLeft_toLeftOf="@id/row_2_guideline"
            app:layout_constraintRight_toRightOf="@id/row_2_guideline"
            app:layout_constraintTop_toTopOf="@id/row_2_guideline" />

        <TextView
            android:id="@+id/label_english_of_col_II"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/label_english_of_col_II"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/row_3_guideline"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_english_of_col_II"
            app:layout_constraintTop_toTopOf="@id/row_2_guideline" />

        <TextView
            android:id="@+id/text_english_of_col_II"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/row_3_guideline"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintLeft_toRightOf="@id/label_english_of_col_II"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/row_2_guideline"
            tools:text="Crown" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/row_3_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="300dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A5A0A0"
            app:layout_constraintBottom_toBottomOf="@id/row_3_guideline"
            app:layout_constraintLeft_toLeftOf="@id/row_3_guideline"
            app:layout_constraintRight_toRightOf="@id/row_3_guideline"
            app:layout_constraintTop_toTopOf="@id/row_3_guideline" />

        <TextView
            android:id="@+id/label_consciousness_of_the_adept"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/label_consciousness_of_the_adept"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/row_4_guideline"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_consciousness_of_the_adept"
            app:layout_constraintTop_toTopOf="@id/row_3_guideline" />

        <TextView
            android:id="@+id/text_consciousness_of_the_adept"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/row_4_guideline"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintLeft_toRightOf="@id/label_consciousness_of_the_adept"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/row_3_guideline"
            tools:text="هو الله الذی لا الله الا هو" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/row_4_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="400dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A5A0A0"
            app:layout_constraintBottom_toBottomOf="@id/row_4_guideline"
            app:layout_constraintLeft_toLeftOf="@id/row_4_guideline"
            app:layout_constraintRight_toRightOf="@id/row_4_guideline"
            app:layout_constraintTop_toTopOf="@id/row_4_guideline" />

        <TextView
            android:id="@+id/label_god_names_in_assiah"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/label_label_god_names_in_assiah"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/row_5_guideline"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintHorizontal_weight="0.3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_god_names_in_assiah"
            app:layout_constraintTop_toTopOf="@id/row_4_guideline" />

        <TextView
            android:id="@+id/text_god_names_in_assiah"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@id/row_5_guideline"
            app:layout_constraintHorizontal_weight="0.7"
            app:layout_constraintLeft_toRightOf="@id/label_god_names_in_assiah"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/row_4_guideline"
            tools:text="אהיה" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/row_5_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="500dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#A5A0A0"
            app:layout_constraintBottom_toBottomOf="@id/row_5_guideline"
            app:layout_constraintLeft_toLeftOf="@id/row_5_guideline"
            app:layout_constraintRight_toRightOf="@id/row_5_guideline"
            app:layout_constraintTop_toTopOf="@id/row_5_guideline" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>